# python-can-coe

./: .gitignore  README.md  pyproject.toml
coe/: __init__.py  coe.py  message.py  messagebuilder.py
examples/: v1.py  v1_publish.py  v2.py  v2_publish.py
test/: test_messagebuilder_v1.py  test_messagebuilder_v2.py
